--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ input::-webkit-inner-spin-button {
 }
 
 body {
-  background-image: url(/assets/bg.jpg);
+  background-image: url(./assets/bg.jpg);
   background-size: cover;
   background-position: center;
   font-family: 'Rubik', sans-serif;
