--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+* {
+  scroll-behavior: smooth;
+}
 
 body {
   background-image: url(./assets/bg.jpg);
